--- a/css/style.css
+++ b/css/style.css
@@ -11,12 +11,18 @@ body{
 html{
   scroll-behavior: smooth;
 }
+
 #header{
   width: 100%;
   height: 100vh;
   background-image: url(../images/background.png);
   background-size: cover;
   background-position: center;
+}
+.header-img{
+  width: 100%;
+  height: 500px;
+  margin-left: 10px;
 }
 .container{
   padding: 10px 10px;
